api-gateway/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
        version: v1
    spec:
      containers:
      - name: api-gateway
        image: api-gateway:1
        resources:
          limits:
            memory: "528Mi"
            cpu: "0.5"
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-svc
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
  - port: 3001
    name: http
